# vlc-streamer

./: README.md  pyproject.toml  requirements.txt  setup.py  vlc_streamer.py
vlc_streamer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
