[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlc_streamer"
version = "1.0"
authors = [
  { name="KreativeThinker" },
]
description = "A vlc based music engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KreativeThinker/vlc-streamer"
"Bug Tracker" = "https://github.com/KreativeThinker/vlc-streamer/issues"